Mbs 10605 use convention plugins (#774)
* use libs everywhere remove buildSrc

* note about configure on demand